--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,15 @@
             android:screenOrientation="landscape"
             android:windowSoftInputMode="stateHidden"
             >
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+        </activity>
+
+        <activity android:name=".AplicacionActivity"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="stateHidden"
+            >
+        </activity>
+
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
